# ffprobe-py

./: LICENSE  README.md  pyproject.toml
src/probePy/: __init__.py  exceptions.py  probe.py
